updated to version v3 which implements swagger
