# src/static/swagger.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "title": "I3-Market Notification Manager API"
   },
-  "host": "localhost:10010",
+  "host": "localhost:5000",
   "basePath": "/api/v1/",
   "schemes": [
     "http",
@@ -38,7 +38,7 @@
     "/health": {
       "x-swagger-router-controller": "health",
       "get": {
-        "operationId": "health_check",
+        "operationId": "version",
         "description": "Healthcheck endpoint",
         "responses": {
           "200": {
@@ -47,13 +47,13 @@
         }
       }
     },
-    "/user/subscriptions": {
+    "/users/subscriptions": {
       "get": {
         "tags": [
           "Subscriptions"
         ],
         "description": "Receive all users subscriptions",
-        "operationId": "get_subscriptions",
+        "operationId": "get_users",
         "responses": {
           "200": {
             "description": "Ok",
@@ -93,7 +93,15 @@
             "required": true,
             "in": "body",
             "schema": {
-              "type": "string"
+              "type": "object",
+              "required": [
+                "category"
+              ],
+              "properties": {
+                "category": {
+                  "type": "string"
+                }
+              }
             }
           }
         ],
@@ -129,7 +137,7 @@
             "type": "string"
           }
         ],
-        "description": "Return user subscription",
+        "description": "Return user subscriptions",
         "operationId": "get_subscriptions_by_user_id",
         "responses": {
           "200": {
@@ -215,44 +223,6 @@
         ],
         "description": "Delete one subscription using the subscription id by user id",
         "operationId": "delete_subscription",
-        "responses": {
-          "200": {
-            "description": "Ok"
-          },
-          "400": {
-            "description": "Bad request",
-            "schema": {
-              "$ref": "#/definitions/ErrorResponse"
-            }
-          },
-          "default": {
-            "description": "Error",
-            "schema": {
-              "$ref": "#/definitions/ErrorResponse"
-            }
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "Subscriptions"
-        ],
-        "parameters": [
-          {
-            "name": "user_id",
-            "required": true,
-            "in": "path",
-            "type": "string"
-          },
-          {
-            "name": "subscription_id",
-            "required": true,
-            "in": "path",
-            "type": "string"
-          }
-        ],
-        "description": "Modify one subscription using the subscription id by user id",
-        "operationId": "modify_subscription",
         "responses": {
           "200": {
             "description": "Ok"
@@ -504,7 +474,7 @@
             "type": "string"
           },
           {
-            "name": "service_data",
+            "name": "queue_data",
             "required": true,
             "in": "body",
             "schema": {
@@ -515,11 +485,12 @@
               "properties": {
                 "name": {
                   "type": "string",
-                  "description": "Name for the service, for example Agora Marketplace"
+                  "description": "Name for the Queue, for example \"offering.new\"",
+                  "$ref": "#/definitions/QueueName"
                 },
                 "endpoint": {
                   "type": "string",
-                  "description": "This endpoint can be defined as a generic endpoint for sending all notifications, however it is possible to define a different endpoint for each of the queues to which the service is registered."
+                  "description": "This endpoint can be defined as a different endpoint for this queue."
                 }
               }
             }
